--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "start": "node server/index.js",
     "dev": "webpack --mode development && node server/index.js",
     "build": "webpack --mode production",
+    "heroku-postbuild": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jessa Daggs",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
@@ -25,6 +29,7 @@
     "@babel/preset-react": "^7.12.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "dotenv-webpack": "^6.0.0",
     "html-webpack-plugin": "^4.5.0",
     "path": "^0.12.7",
     "style-loader": "^2.0.0",
